manifests/base/server/athena-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: athena-server
    app.kubernetes.io/part-of: athena
    app.kubernetes.io/component: server
  name: athena-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: athena-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: athena-server
    spec:
      serviceAccountName: athena-server
      containers:
        - name: athena-server
          image: quay.io/useryege/athena:latest
          imagePullPolicy: Always
          args:
            - /usr/local/bin/athena-server
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          ports:
            - containerPort: 8080
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /healthz?full=true
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - emptyDir: {}
          name: tmp
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: athena-server
                topologyKey: kubernetes.io/hostname
            - weight: 5
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/part-of: athena
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
