manifests/base/server/athena-server-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: athena-server-metrics
    app.kubernetes.io/part-of: athena
    app.kubernetes.io/component: server
  name: athena-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8083
    targetPort: 8083
  selector:
    app.kubernetes.io/name: athena-server
