manifests/base/server/athena-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: athena-server
    app.kubernetes.io/part-of: athena
    app.kubernetes.io/component: server
  name: athena-server
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/name: athena-server
